@@ -13,7 +13,7 @@
    (export '(out-to-string dbg-out dbg-out-indent
 	     err-out cons-if-new plev plen
 	     classify shorter list-splice is-list-of boole-eq eqn
-	     mod-load val-or-initialize memoize-val)))
+	     mod-load val-or-initialize memoize-val gen-var)))
 
 (defmacro out-to-string (&rest outargs)
    `(with-output-to-string (string-stream) (out (:to string-stream) ,@outargs)))
@@ -139,3 +139,6 @@
 				         "'val-or-initialize' must have"
 				         " :store-as argument")))
    `(val-or-initialize ,store-place^ :init ,exp^ :missing-if ,uncached-val^))
+
+(defun gen-var (sym)
+   (build-symbol (:package false) (< sym) - (++ symno*)))
